Votes comparer is now collapsable. Small fixes

--- a/src/circles.css
+++ b/src/circles.css
@@ -25,10 +25,6 @@
         border-radius: 50%;
     bottom: -25vh;
     animation: animate 25s linear infinite;
-
-    @variant dark {
-      background: transparent;
-    }
   }
 
   /* Bubbles */
