--- a/src/input.css
+++ b/src/input.css
@@ -3,8 +3,8 @@
 
 
 @theme {
-    --color-navy: #000508;
-    --color-dark-green: #060a06;
+    --color-navy: #00060a;
+    --color-dark-green: #070f07;
     --color-dirty-red: #200a0a;
     --color-neon-blue: rgb(0, 183, 255);
 
